2009-12-30  kitone  <kitone@gna.org>

	* src/we/waveformeditor.cc:
	Fix invalid subtitle end when the next subtitle isn't really the next.
	Caused by the option 'respect the timing'.

2009-12-23  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Improve debug msg in seek function.

2009-12-23  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Improve debug msg in the on_bus_message_sync.

2009-12-23  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Disable sync message when prepare-xwindow-id is done.

2009-12-23  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Fix: return the audio sink.

2009-12-21  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Add g_warning info.

2009-12-21  kitone  <kitone@gna.org>

	* src/vp/gstplayer.cc:
	Fix segfault with the text overlay.

2009-12-21  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop.in:
	Fix bug #14974 : More appropriate Video category for subtitleeditor.desktop 
	(patch by Dan S <danstowell>)

2009-12-09  kitone  <kitone@gna.org>

	* configure.in:
	Display the status of osx option.

2009-12-09  kitone  <kitone@gna.org>

	* plugins/actions/preferences/dialog-preferences.ui:
	Small fixes.

2009-12-08  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/vp/gstreamerplayer.cc:
	* src/vp/gstreamerplayer.h:
	Remove files.

2009-12-08  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/player.cc:
	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	* src/vp/videoplayer.cc:
	Introduce gstplayer (gstreamermm) to replace the old player (gstreamer).
	Fix bug #14386 : Subtitle Editor Fails to Load any Video File.

2009-11-13  kitone  <kitone@gna.org>

	* src/filewriter.cc:
	Fix previous commit.

2009-11-12  kitone  <kitone@gna.org>

	* src/filereader.cc:
	* src/filereader.h:
	* src/filewriter.cc:
	* src/filewriter.h:
	Switch to gio(mm).

2009-11-02  kitone  <kitone@gna.org>

	* plugins/actions/splitsubtitle/splitsubtitle.cc:
	Fix typo.

2009-11-01  kitone  <kitone@gna.org>

	* src/keyframes.cc: